manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "react-nginx-app"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "react-nginx"
  template:
    metadata:
      labels:
        app: "react-nginx"
    spec:
      containers:
        - name: "react-nginx-container"
          image: "ajitacr.azurecr.io/ajitazureaks:latest"
          ports:
          - containerPort: 8080
